--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
         Rock <i class="fa-solid fa-hand-back-fist"></i> Paper <i class="fa-solid fa-hand"></i> Scissors <i class="fa-solid fa-hand-scissors"></i>
     </h1>
 
+    <div class="game-area">
+        <h2>Computer Choice: <span id="computer-choice"></span></h2>
+        <h2>Your Choice: <span id="user-choice"></span></h2>
+        <h2>Result: <span id="result"></span></h2>
+
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
+    </div>
+
+
+    
     <script src="assets/js/script.js"></script>
 </body>
 </html>
