--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 
     
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" charset="utf-8"></script>
 </body>
 </html>
+
