add footer with social links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/c8c56d5b9b.js" crossorigin="anonymous"></script>
     <title>RPC</title>
 </head>
 <body>
@@ -26,8 +25,25 @@
         <button id="scissors">scissors</button>
     </div>
 
+    <footer id="footer">
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i>FACEBOOK</a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i>TWITTER</a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i>YOUTUBE</a>
+            </li>
+            <li>
+                <a href="https://instagram.com"><i class="fa-brands fa-instagram-square"></i>INSTAGRAM</a>
+            </li>
+        </ul>
+    </footer>
 
-    
+
+    <script src="https://kit.fontawesome.com/c8c56d5b9b.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js" charset="utf-8"></script>
 </body>
 </html>
