--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <script src="https://kit.fontawesome.com/c8c56d5b9b.js" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js" charset="utf-8"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
 
