--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <button id="scissors">Scissors</button>
     </div>
 
+    <div class="info">
+        <h2>Rock Paper Scissors is a hand game originating from China, usually played between two people, in which each player simultaneously forms one of three shapes with an outstretched hand. These shapes are "rock" (a closed fist), "paper" (a flat hand), and "scissors" (a fist with the index finger and middle finger extended, forming a V). "Scissors" is identical to the two-fingered V sign (also indicating "victory" or "peace") except that it is pointed horizontally instead of being held upright in the air.</h2>
+    </div>
+
     <footer id="footer">
         <ul class="social-networks">
             <li>
