--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,13 +17,11 @@
     </h1>
 
     <div class="game-area">
-        <h2>Computer Choice: <span id="computer-choice"></span></h2>
-        <h2>Your Choice: <span id="user-choice"></span></h2>
-        <h2>Result: <span id="result"></span></h2>
 
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <div id="button"></div>
+
+        <h2 id="result"></h2>
+        
     </div>
 
     <div class="info">
@@ -46,10 +44,8 @@
             </li>
         </ul>
     </footer>
-
-
     <script src="https://kit.fontawesome.com/c8c56d5b9b.js" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js" charset="utf-8"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
 
