add game logo image in game area

--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
     </h1>
 
     <div class="game-area">
-
         <div id="button"></div>
-
         <h2 id="result"></h2>
-        
+        <img src="assets/images/rpc-logo.png" alt="logo" width="50%" height="50%">
     </div>
 
     <div class="info">
