change h2 element from game-area into div and change font size to 2em

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <div class="game-area">
         <div id="button"></div>
-        <h2 id="result"></h2>
-        <img src="assets/images/rpc-logo.png" alt="logo" width="50%" height="50%">
+        <div id="result"></div>
+        <img src="assets/images/rps-logo.png" alt="logo" width="50%" height="50%">
     </div>
 
     <div class="info">
