--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="game-area">
         <div id="button"></div>
         <div id="result"></div>
-        <img src="assets/images/rps-logo.png" alt="logo" width="50%" height="50%">
+        <img class="logo" src="assets/images/rps-logo.png" alt="logo">
     </div>
 
     <div class="info">
